--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/cardview_dark_background"
-    tools:context=".Fragment.FavoriteFragment">
+    tools:context=".fragment.FavoriteFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list_favorite"
