--- a/app/src/main/res/layout/recipe_item_list.xml
+++ b/app/src/main/res/layout/recipe_item_list.xml
@@ -17,7 +17,7 @@
             android:layout_height="180dp"
             android:background="@drawable/radius"
             android:scaleType="centerCrop"
-            android:src="@drawable/img"
+            android:src="@drawable/recipe_default"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
