--- a/app/src/main/res/menu/menu_recipe.xml
+++ b/app/src/main/res/menu/menu_recipe.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/button_search"
-        android:icon="@drawable/ic_baseline_search_24"
-        app:showAsAction="ifRoom"
-        android:title="" />
+
     <item
         android:id="@+id/button_filter"
         app:showAsAction="ifRoom"
@@ -14,6 +10,6 @@
     <item
         android:id="@+id/logout"
         android:title="Đăng xuất"
-        app:showAsAction="never"/>/>
+        app:showAsAction="never"/>
 
 </menu>
