--- a/app/src/main/res/layout/recipe_item_list.xml
+++ b/app/src/main/res/layout/recipe_item_list.xml
@@ -9,6 +9,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:id="@+id/item_container"
+        android:background="@color/white"
         android:layout_height="wrap_content">
 
         <ImageView
