--- a/app/src/main/res/layout/ingredients_item_list.xml
+++ b/app/src/main/res/layout/ingredients_item_list.xml
@@ -9,10 +9,12 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:id="@+id/item_ingre"
+        android:background="@color/white"
         android:layout_height="wrap_content">
 
         <ImageView
-            android:id="@+id/image_list_recipe"
+            android:id="@+id/image_list_ingredients"
             android:layout_width="160dp"
             android:layout_height="120dp"
             android:background="@drawable/radius"
@@ -23,7 +25,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/title_recipe_list"
+            android:id="@+id/title_ingredients"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
@@ -34,11 +36,11 @@
             android:textColor="#000"
             android:textSize="25sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/image_list_recipe"
-            app:layout_constraintTop_toTopOf="@id/image_list_recipe" />
+            app:layout_constraintStart_toEndOf="@id/image_list_ingredients"
+            app:layout_constraintTop_toTopOf="@id/image_list_ingredients" />
 
         <TextView
-            android:id="@+id/summary_recipe_list"
+            android:id="@+id/weight_ingre"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
@@ -48,8 +50,8 @@
             android:text="100g"
             android:textSize="15sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/image_list_recipe"
-            app:layout_constraintTop_toBottomOf="@id/title_recipe_list" />
+            app:layout_constraintStart_toEndOf="@id/image_list_ingredients"
+            app:layout_constraintTop_toBottomOf="@id/title_ingredients" />
 
 
 
