--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -1,29 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     tools:context=".fragment.OverviewFragment">
 
     <!-- TODO: Update blank fragment layout -->
-<!--    <TextView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:textColor="@color/black"-->
-<!--        android:textSize="30dp"-->
-<!--        android:layout_marginLeft="30dp"-->
-<!--        android:text="@string/overview_fragment" />-->
+    <!--    <TextView-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="match_parent"-->
+    <!--        android:textColor="@color/black"-->
+    <!--        android:textSize="30dp"-->
+    <!--        android:layout_marginLeft="30dp"-->
+    <!--        android:text="@string/overview_fragment" />-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-            <LinearLayout
+        <LinearLayout
+            android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/food">
+
             <ImageView
                 android:id="@+id/ic_like"
                 android:layout_width="40dp"
@@ -46,114 +48,125 @@
                 app:layout_constraintVertical_chainStyle="packed" />
 
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Gà quay"
+
+                android:textColor="@color/black"
+                android:textSize="30sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <RadioButton
+                    android:id="@+id/rdVegan"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:enabled="false"
+
+                    android:text="Vegan"
+                    android:textColor="@color/black"></RadioButton>
+
+                <RadioButton
+                    android:id="@+id/rdDairy"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:enabled="false"
+                    android:text="Dairy Free"
+                    android:textColor="@color/black"></RadioButton>
+
+                <RadioButton
+                    android:id="@+id/rdHealthy"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:enabled="false"
+                    android:text="Healthy"
+                    android:textColor="@color/black"></RadioButton>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <RadioButton
+                    android:id="@+id/rdVegetarian"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:enabled="false"
+                    android:text="Vegetarian"
+                    android:textColor="@color/black"></RadioButton>
+
+                <RadioButton
+                    android:id="@+id/rdGlutentFree"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:enabled="false"
+                    android:text="Glutent Free"
+                    android:textColor="@color/black"></RadioButton>
+
+                <RadioButton
+                    android:id="@+id/rdCheap"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:enabled="false"
+                    android:text="Cheap"
+                    android:textColor="@color/black"></RadioButton>
+            </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:orientation="vertical"
-                android:paddingLeft="15dp"
-                android:paddingRight="15dp">
+                android:orientation="vertical">
 
                 <TextView
+
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Gà quay"
+                    android:layout_marginTop="10dp"
+                    android:text="- Mô tả"
+                    android:textColor="@color/gray"
+                    android:textSize="16dp" />
 
+                <TextView
+                    android:id="@+id/tvDescription"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="fjdsfhjdfhdfdoifdiofoidfdfdf"
                     android:textColor="@color/black"
-                    android:textSize="30sp"/>
+                    android:textSize="18sp" />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <RadioButton
-                        android:id="@+id/rdVegan"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Vegan"
+                <TextView
 
-                        android:enabled="false"
-                        android:textColor="@color/black"></RadioButton>
-                    <RadioButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Dairy Free"
-                        android:id="@+id/rdDairy"
-                        android:enabled="false"
-                        android:textColor="@color/black"></RadioButton>
-                    <RadioButton
-                        android:id="@+id/rdHealthy"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Healthy"
-                        android:enabled="false"
-                        android:textColor="@color/black"></RadioButton>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <RadioButton
-                        android:id="@+id/rdVegetarian"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Vegetarian"
-                        android:enabled="false"
-                        android:textColor="@color/black"></RadioButton>
-                    <RadioButton
-                        android:id="@+id/rdGlutentFree"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Glutent Free"
-                        android:enabled="false"
-                        android:textColor="@color/black"></RadioButton>
-                    <RadioButton
-                        android:id="@+id/rdCheap"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Cheap"
-                        android:enabled="false"
-                        android:textColor="@color/black"></RadioButton>
-                </LinearLayout>
-
-                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                    <TextView
+                    android:layout_marginTop="10dp"
+                    android:text="- Các bước"
+                    android:textColor="@color/gray"
+                    android:textSize="16dp" />
 
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="16dp"
-                        android:text="- Mô tả"
-                        android:textColor="@color/gray"
-                        android:layout_marginTop="10dp"/>
-                    <TextView
-                        android:id="@+id/tvDescription"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/black"
-                        android:textSize="18sp"
-                        android:text="fjdsfhjdfhdfdoifdiofoidfdfdf"
-                        android:layout_marginTop="10dp"/>
-                    <TextView
-
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="16dp"
-                        android:text="- Các bước"
-                        android:textColor="@color/gray"
-                        android:layout_marginTop="10dp"/>
-                    <TextView
-                        android:id="@+id/tvStep"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/black"
-                        android:textSize="18sp"
-                        android:text="fjdsfhjdfhdfdoifdiofoidfdfdf"
-                        android:layout_marginTop="10dp"/>
-                </LinearLayout>
-
+                <TextView
+                    android:id="@+id/tvStep"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="fjdsfhjdfhdfdoifdiofoidfdfdf"
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
             </LinearLayout>
+
+        </LinearLayout>
 
     </LinearLayout>
 
