--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,7 +28,7 @@
         android:id="@+id/Main_viewpager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="#ABEFE7E7"
+        android:background="@color/background"
         app:layout_constraintBottom_toTopOf="@+id/main_tablayout"
         app:layout_constraintTop_toBottomOf="@id/appbar" />
 
