--- a/app/src/main/res/layout/comment_item_list.xml
+++ b/app/src/main/res/layout/comment_item_list.xml
@@ -4,17 +4,24 @@
     android:layout_height="wrap_content"
     android:paddingEnd="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <ImageView
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginHorizontal="10dp"
-        android:id="@+id/item_avatar_comment"
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:id="@+id/container_avatar"
         app:layout_constraintTop_toTopOf="parent"
+        app:cardCornerRadius="20dp"
+        android:layout_marginHorizontal="10dp"
         app:layout_constraintStart_toStartOf="parent"
-        android:background="@drawable/ic_default_avatar"/>
+        android:layout_height="wrap_content">
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/item_avatar_comment"
+            android:background="@drawable/ic_default_avatar"/>
+
+    </androidx.cardview.widget.CardView>
     <LinearLayout
         android:layout_marginLeft="10dp"
-        app:layout_constraintStart_toEndOf="@id/item_avatar_comment"
+        app:layout_constraintStart_toEndOf="@id/container_avatar"
         app:layout_constraintEnd_toEndOf="parent"
         android:padding ="8dp"
         android:background="@drawable/comment"
