--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -9,6 +9,14 @@
         android:id="@+id/list_favorite"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:id="@+id/empty_text"
+        android:textFontWeight="700"
+        android:layout_gravity="center"
+        android:text="Không có dữ liệu"/>
 
 
 </FrameLayout>
