--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="pic_item">#efe8ff</color>
     <color name="gray">#353535</color>
     <color name="comment">#f2f2f2</color>
+    <color name="background">#ABEFE7E7</color>
 </resources>
